# ChangeLog for www-apps/viewcvs
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/viewcvs/ChangeLog,v 1.12 2004/12/23 19:08:16 sejo Exp $

  23 Dec 2004; <SeJo@gentoo.org> viewcvs-0.9.2_p20041207-r1.ebuild:
  stable on ppc glsa: 73772

*viewcvs-0.9.2_p20041207-r1 (23 Dec 2004)

  23 Dec 2004; Stuart Herbert <stuart@gentoo.org>
  +files/viewcvs-CAN-2004-1062.patch, +viewcvs-0.9.2_p20041207-r1.ebuild:
  Added patch for security-related bug #73772

*viewcvs-0.9.2_p20041207 (08 Dec 2004)

  08 Dec 2004; <SeJo@gentoo.org> viewcvs-0.9.2_p20041207.ebuild:
  stable on ppc gsla: 72461

  07 Dec 2004; Stuart Herbert <stuart@gentoo.org> :
  Two rev bumps (one for the released viewcvs, one for the cvs snapshot) to
  address security bug #72461

  05 Sep 2004; Sven Wegener <swegener@gentoo.org>
  viewcvs-0.9.2_p20040831.ebuild:
  Fixed ChangeLog header. Added missing IUSE.

  03 Sep 2004; Renat Lumpau <rl03@gentoo.org> files/reconfig:
  The reconfig hook now cleans up after itself.

*viewcvs-0.9.2_p20040831 (01 Sep 2004)

  04 Oct 2004; <pvdabeel@gentoo.org>:
  Add to ~ppc

  01 Sep 2004; <pauldv@gentoo.org> -viewcvs-0.9.2-r1.ebuild,
  -viewcvs-0.9.2-r2.ebuild, +viewcvs-0.9.2_p20040831.ebuild:
  Remove some stale versions and get a new version from the viewcvs cvs. 
  The old snapshot is more than a year old now.

  30 Aug 2004; Renat Lumpau <rl03@gentoo.org>
  viewcvs-0.9.2_p20030430-r2.ebuild:
  Fixed DEPEND/RDEPEND, removed unneeded src_compile

  26 Aug 2004; Renat Lumpau <rl03@gentoo.org> viewcvs-0.9.2-r1.ebuild,
  viewcvs-0.9.2_p20030430-r1.ebuild, viewcvs-0.9.2_p20030430.ebuild:
  Fixed repoman warnings (lack of IUSE)

*viewcvs-0.9.2_p20030430-r2 (26 Aug 2004)

  26 Aug 2004; Renat Lumpau <rl03@gentoo.org> +files/postinstall-en.txt,
  +files/reconfig, +viewcvs-0.9.2_p20030430-r2.ebuild:
  Rewrite to use webapp.ecalss. Closes #60893.

*viewcvs-0.9.2-r2 (15 Aug 2004)
