@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>web-apps</herd>
-<maintainer>
-<email>web-apps@gentoo.org</email>
-<name>Gentoo Web Application Packages Maintainers</name>
-</maintainer>
+	<herd>web-apps</herd>
+	<maintainer>
+		<email>ramereth@gentoo.org</email>
+		<name>Lance Albertson</name>
+	</maintainer>
+	<longdescription lang="en">
+		ViewCVS is a browser interface for CVS and Subversion version control
+		repositories. It generates templatized HTML to present navigable
+		directory, revision, and change log listings. It can display specific
+		versions of files as well as diffs between those versions. Basically,
+		ViewCVS provides the bulk of the report-like functionality you expect
+		out of your version control tool, but much more prettily than the
+		average textual command-line program output.
+	</longdescription>
 </pkgmetadata>
+
