@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/viewcvs
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/viewcvs/ChangeLog,v 1.12 2004/12/23 19:08:16 sejo Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apps/viewcvs/ChangeLog,v 1.13 2005/05/23 02:15:23 ramereth Exp $
+
+  23 May 2005; Lance Albertson <ramereth@gentoo.org> metadata.xml:
+  Adding myself as maintainer to help with the package
 
   23 Dec 2004; <SeJo@gentoo.org> viewcvs-0.9.2_p20041207-r1.ebuild:
   stable on ppc glsa: 73772
